# Blender-Renderfarm

./: .gitignore  LICENSE  README.md  pyproject.toml
blender_module/: __main__.py
blender_renderfarm/: __init__.py  __main__.py  collector.py  encoder.py  send_blend.py  server_discovery.py  utils.py
blender_renderfarm/blender_scripts/: main.py
tests/: test_discovery.py  test_package.py  test_utils.py
tests/resources/: scripts  test-cycles.blend  test.blend
